--- a/generators/templates/index.tsx.hbs
+++ b/generators/templates/index.tsx.hbs
@@ -1,6 +1,6 @@
 import { Text, Box } from '@chakra-ui/react'
 
-export interface {{pascalCase name}}Props {
+export type {{pascalCase name}}Props = {
   title: string
 }
 
