--- a/generators/templates/stories.tsx.hbs
+++ b/generators/templates/stories.tsx.hbs
@@ -4,9 +4,14 @@ import {{pascalCase name}}, { {{pascalCase name}}Props } from '.'
 export default {
   title: '{{pascalCase name}}',
   component: {{pascalCase name}},
-  args: {
-    title: 'My Title'
+  argTypes: {
+    children: {
+      type: 'string'
+    }
   }
 } as Meta
 
-export const Basic: Story<{{pascalCase name}}Props> = (args) => <{{pascalCase name}} {...args} />
+export const Default: Story<{{pascalCase name}}Props> = (args) => <{{pascalCase name}} {...args} />
+Default.args = {
+  children: 'My Title'
+}
