--- a/src/components/EditorText/EditorText.module.css
+++ b/src/components/EditorText/EditorText.module.css
@@ -2,14 +2,14 @@
   /* Overrides the border radius setting in the theme. */
   --ck-border-radius: 2px;
   --ck-color-focus-border: #322659;
-  --ck-color-base-background: #1F2029;
+  --ck-color-base-background: #181b23;
   --ck-color-base-border: #181b23;
 
   --ck-color-list-button-on-background: #322659;
   --ck-color-list-button-on-background-focus: #322659;
   --ck-color-list-button-on-text: #ffffff;
 
-  --ck-color-toolbar-background: #1F2029;
+  --ck-color-toolbar-background: #181b23;
   --ck-color-tooltip-text: #ffffff;
 
   --ck-color-button-default-hover-background: #181b23;
@@ -32,6 +32,4 @@
 
   --ck-font-size-base: 12px;
   --ck-spacing-unit: 20px;
-
-  z-index: 9999999;
 }
